--- a/Module Web/css/style.css
+++ b/Module Web/css/style.css
@@ -23,3 +23,46 @@ body
 footer {
 	text-align: center;
 }
+
+#tabBar
+{
+	height: 50px;
+	width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+#tabBar a
+{
+	display: inline-block;
+	width : 30%;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	color: white;
+	border: 1px solid white;
+}
+
+#menu
+{
+	display: inline-block;
+	width: 200px;
+	height: 480px;
+	border: 2px solid white;
+	float: left;
+}
+
+#menu a
+{
+	display: block;
+}
+
+#content
+{
+	display: inline-block;
+	width: 790px;
+	margin-left: 2px;
+	height: 480px;
+	border: 2px solid white;
+}
